infrastructure/configs/modsecurity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modsecurity
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: modsecurity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: modsecurity
    spec:
      containers:
        - env:
            - name: BACKEND
              value: http://localhost:9090
            - name: MODSEC_RULE_ENGINE
              value: !!str On
            - name: PARANOIA
              value: !!str 1
            - name: PORT
              value: !!str 8080
          image: owasp/modsecurity-crs:nginx
          name: modsecurity
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
        - image: nginx:alpine
          name: stub
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: stub-config
              subPath: nginx.conf
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - configMap:
            name: modsecurity-stub
          name: stub-config
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modsecurity
  namespace: traefik
spec:
  plugin:
    traefik-modsecurity-plugin:
      maxBodySize: 10485760
      modSecurityUrl: http://modsecurity.traefik.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: modsecurity
  namespace: traefik
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: modsecurity
