infrastructure/configs/traefik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: traefik
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
#   namespace: traefik
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`traefik.***REMOVED***`)
#       middlewares:
#         - name: ip-allowlist
#           namespace: traefik
#         - name: security-headers
#           namespace: traefik
#       services:
#         - kind: TraefikService
#           name: api@internal
#   tls:
#     secretName: traefik-dashboard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: traefik
spec:
  headers:
    customResponseHeaders:
      Permissions-Policy: geolocation=(), microphone=(), camera=()
      Referrer-Policy: strict-origin-when-cross-origin
      X-Content-Type-Options: nosniff
      X-Frame-Options: DENY
      X-Robots-Tag: noindex, nofollow
      X-XSS-Protection: 1; mode=block
